# -

./: .gitignore  111.bat  README.md  config.example.json  config.example.yaml  config.toml  cookie_export.ps1  main.py  package-lock.json  package.json  pyproject.toml  readme  requirements.txt  sandbox_manager.py
app/: config.py  main.py  sandbox.py  sandbox_manager.py  schemas.py  utils.py
app/static/: app.js  index.html  main.js  style.css  styles.css
app/templates/: index.html
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  styles.css
frontend/: app.js  index.html  styles.css
kiro_automation/: __init__.py  __main__.py  auth_aws.py  auth_base.py  auth_google.py  auth_url_collector.py  browser.py  browser_client.py  config.py  config_manager.py  credential_handler.py  credential_watcher.py  email_service.py  exceptions.py  generators.py  kiro_client.py  kiro_launcher.py  logger.py  logging_utils.py  loop_controller.py  orchestrator.py  password.py  temp_mail.py
server/: index.js  package-lock.json  package.json  sandboxManager.js  siteAutomation.js  utils.js
